# rtml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  graph.dot  run_bench.sh
benchmark/: CMakeLists.txt  plot.py
benchmark/gbench/: CMakeLists.txt
benchmark/src/: fixture.hpp  main.cpp  tensor_ops_flops.cpp
examples/: tensor.lua  tensor.py  xor.lua
lua/: rtml.lua
python/: librtml_runtime.dylib  rtml.py  rtml_ffi.py  rtml_runtime.py  test.py
rtml/: CMakeLists.txt  base.cpp  base.hpp  blas.cpp  blas.hpp  fixed_vector.hpp  graph.hpp  isolate.cpp  isolate.hpp  net.cpp  net.hpp  tensor.hpp
runtime/: CMakeLists.txt  base.cpp  base.hpp  blas.cpp  blas.hpp  capi.cpp  context.cpp  context.hpp  fixed_vector.hpp  graph.cpp  graph.hpp  isolate.cpp  isolate.hpp  op.cpp  op.hpp  rtml.cpp  rtml.hpp  rtml_api.cpp  rtml_capi.cpp  rtml_capi.h  rtml_tests.cpp  tensor.cpp  tensor.hpp  tensor_base.hpp
test/: CMakeLists.txt  blas.cpp  fixed_vector.cpp  isolate.cpp  pool.cpp  tensor.cpp
test/src/: blas.cpp  fixed_vector.cpp  graph.cpp  main.cpp  network.cpp  pool.cpp  tensor.cpp
tools/: gen_ffi.sh
