file(GLOB SOURCES *.cpp *.hpp *.h)
add_compile_options(-march=native -Wall -Wextra -Werror)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(-O0 -g)
else()
    add_compile_options(-Ofast)
endif()
add_compile_options(-fPIC)
# add_compile_options(-fno-rtti -fno-exceptions)
add_library(rtml_runtime SHARED ${SOURCES})
add_subdirectory(extern)
